[package]
name = "zemen"
version = "0.1.7"
edition = "2021"
authors = ["Omer Abdulaziz <omerabdi@pm.me>"]
rust-version = "1.75.0"
description = "Ethiopian to Gregorian conversion utility"
readme = "README.md"
repository = "https://github.com/omer-biz/zemen/"
license = "MIT"
keywords = ["ethiopian", "convert", "date", "gregorian", "ethiopia"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
time = { version = "0.3.31", optional = true }

[features]
default = ["time"]
time = ["dep:time"]
